# Video-Captions

./: .gitignore  CLAUDE.md  Makefile  README.md  bilibili_api.py  main.py  mcp_server.py  pyproject.toml  run_mcp.py
.github/workflows/: publish.yml
docs/: DESIGN.md
skills/video-captions/: SKILL.md
src/bilibili_captions/: api.py  browser.py  cli.py  core.py  server.py
src/bilibili_subtitle_fetcher/: api.py  server.py
src/core/: __init__.py  asr.py  audio.py  browser.py  cookie.py  formatter.py  logging.py  text.py
src/handler/: __init__.py  cli.py  mcp.py
src/service/: __init__.py  base.py  bilibili.py  local.py  youtube.py
tests/: test_bilibili.py  test_videos.py  test_youtube.py
