[project]
name = "bilibili-subtitle-fetcher"
version = "0.1.0"
description = "B站字幕抓取工具及MCP服务器"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["bilibili", "subtitle", "mcp", "whisper", "asr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.27.0",
    "faster-whisper>=1.0.0",
    "requests>=2.32.4",
    "opencc-python-reimplemented>=0.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/your-username/bilibili-subtitle-fetcher"
Repository = "https://github.com/your-username/bilibili-subtitle-fetcher"
Issues = "https://github.com/your-username/bilibili-subtitle-fetcher/issues"

[project.scripts]
bilibili-subtitle = "main:main"
bilibili-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py310"
